# RtcGateway

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
core/: system.cc  system.h
core/gateway/: gateway_factory.cc  rtc_gateway.cc  rtc_gateway.h  signaling_session.cc  signaling_session.h  signaling_session_manager.cc  signaling_session_manager.h
core/gateway/messenger/: websocket_listener.cc  websocket_listener.h  websocket_session.cc  websocket_session.h
core/gateway/signaling/: member.cc  member.h  room.cc  room.h  room_event.cc  room_event.h  room_manager.cc  room_manager.h  signaling_packet_defines.h  signaling_process_thread.cc  signaling_process_thread.h  signaling_request_parser.cc  signaling_request_parser.h  signaling_response_generator.cc  signaling_response_generator.h  signaling_session.cc  signaling_session.h  signaling_session_manager.cc  signaling_session_manager.h
core/ice/: ice_connection.cc  ice_connection.h  rtc_peer_connection.cc  rtc_peer_connection.h  sdp_info.cc  sdp_info.h
core/ice/wrapper/: dtls_wrapper.cc  dtls_wrapper.h  glib_wrapper.cc  glib_wrapper.h  nice_wrapper.cc  nice_wrapper.h
core/include/: gateway_factory.h  gateway_interface.h  restart_interface.h
core/thread/: scheduler.cc  scheduler.h  thread_pool.cc  thread_pool.h  worker.cc  worker.h
core/utils/: id_generator.cc  id_generator.h  uuid_generator.cc  uuid_generator.h
core/wrapper/: glib_wrapper.cc  nice_wrapper.cc  nice_wrapper.h
